[package]
name = "cronos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.17"
rayon = "1"
serde_json = "1"
scylla = "0.4.4"
flume = "0.10.12"

serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
poem-openapi = { version = "1.3.22", features = ["redoc", "uuid"] }

