[package]
name = "cronos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Search engine requirements
tantivy = "0.17"
rayon = "1"

# Database driver
scylla = "0.4.4"

# Internal communications between async <-> sync APIs
flume = "0.10.12"

# Logging
tracing = "0.1.33"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.11"

# Global Deps
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
poem-openapi = { version = "1.3.22", features = ["redoc", "uuid"] }

