[package]
name = "cronos"
version = "0.2.1"
edition = "2021"
description = "Dlist's premium search system built for performance and quality."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Search engine requirements
tantivy = { git = "https://github.com/quickwit-oss/tantivy.git" }
rayon = "1"

parking_lot = "0.12.0"
anyhow = "1.0.56"  # Error Handling
scylla = "0.4.4"  # Database driver
flume = "0.10.12"  # Internal communications between async <-> sync APIs
governor = "0.4.2"  # Ratelimiter
once_cell = "1.10.0"  # Lazy globals
futures = "0.3.21"
arc-swap = "1.5.0"
deunicode = "1.3.1"

# Logging
tracing = "0.1.33"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.11"

# Global Deps
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
poem = { version = "1.3.22", features = ["anyhow"] }
poem-openapi = { version = "1.3.22", features = ["redoc", "uuid"] }
clap = { version = "3", features = ["derive", "env"] }
backend-common = { git = "https://github.com/discordlist-gg/backend-common.git" }